# wasmgl

./: Cargo.toml  index.html  index.scss  readme.md
src/: app.rs  layout.rs  main.rs  sidemenu.rs  utils.rs
src/components/: mod.rs
src/components/sidenav/: menu.rs  menu_item.rs  mod.rs  submenu.rs
src/pages/: ch02.rs  ch03.rs  ch04.rs  ch05.rs  ch07.rs  mod.rs  page.rs
src/pages/ch02/: clicked_points.rs  colored_points.rs  drawing_rectangle.rs  hello_canvas.rs  hello_point_1.rs  hello_point_2.rs  mod.rs
src/pages/ch03/: hello_quad.rs  hello_triangle.rs  mod.rs  multi_point.rs  rotated_triangle.rs  rotated_triangle_matrix.rs  scaled_triangle_matrix.rs  translated_triangle.rs  translated_triangle_matrix.rs
src/pages/ch04/: mod.rs  rotated_translated_triangle.rs  rotated_triangle_matrix4.rs  rotating_translated_triangle.rs  rotating_triangle.rs
src/pages/ch05/: colored_triangle.rs  hello_triangle_frag_coord.rs  mod.rs  multi_attribute_size.rs  multi_attribute_size_interleaved.rs  multi_texture.rs  textured_quad.rs  textured_quad_clamp_mirror.rs  textured_quad_repeat.rs
src/pages/ch07/: look_at_rotated_triangles.rs  look_at_triangles.rs  look_at_triangles_with_keys.rs
src/styles/: _sidenav.scss
src/utils/: context.rs  draging.rs  mod.rs
