[package]
name = "wasmgl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.79"
wee_alloc = "0.4.5"
yew = "0.19.3"
yew-router = "0.16.0"
wasm-logger = "0.2.0"
log = "0.4.16"
js-sys = "0.3.56"
nalgebra = "0.30.1"

[dependencies.web-sys]
version = "0.3.56"
features = [
  "DomRect",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "WebGl2RenderingContext",
  "WebGlProgram",
  "WebGlShader",
  "WebGlUniformLocation",
  "WebGlBuffer",
]
