[package]
name = "wasmgl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
js-sys = "0.3.60"
log = "0.4.17"
nalgebra = "0.31.4"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"

[dependencies.web-sys]
version = "0.3.60"
features = [
  "CanvasRenderingContext2d",
  "DomRect",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "KeyEvent",
  "WebGl2RenderingContext",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
]

[profile.release]
lto = true
strip = true
